--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,6 @@ variables:
 
 steps:
 
-- script: |
-    echo $(CloudInitContent)
-
 - task: AzureResourceManagerTemplateDeployment@3
   inputs:
     deploymentScope: 'Resource Group'
@@ -27,5 +24,5 @@ steps:
     templateLocation: 'Linked artifact'
     csmFile: '$(Build.SourcesDirectory)/AzureResourceGroup1/AzureResourceGroup1/azuredeploy.json'
     csmParametersFile: '$(Build.SourcesDirectory)/AzureResourceGroup1/AzureResourceGroup1/azuredeploy.parameters.json'
-    overrideParameters: '-customData $(CloudInitContent)'
+    overrideParameters: ''
     deploymentMode: 'Incremental'
