--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,11 +12,11 @@ variables:
 - name: CloudInitContent
 
 jobs:
-- job: Deploy main
+- job: Deploy_main
   steps:
 
   - task: AzureResourceManagerTemplateDeployment@3
-    displayName: 'Deploy Azure ressources'
+    displayName: 'Deploy_azure_ressources'
     inputs:
       deploymentScope: 'Resource Group'
       azureResourceManagerConnection: 'Azure subscription 1(f8ee07ed-b563-4b27-931f-56bdf1405242)'
