--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ variables:
   - name: AzureAppInfrastructure
     value: 'AzureResourceGroup1\AzureResourceGroup1'
 
+stages:
 - stage: Infra
   displayName: Infrastructure Deployment
   jobs:
