--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,7 @@ stages:
         
     - script: |
         echo ##vso[task.setvariable variable=BlobString;isOutput=true;isSecure=true]$(Deployment1.blobstoragestring.value)
+        echo $(Deployment1.blobstoragestring.value)
       name: AssignKey
 
 - stage: Function
