--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,6 +54,11 @@ stages:
         echo ##vso[task.setvariable variable=BlobString;isOutput=true;isSecure=true]$(Deployment1.blobstoragestring.value)
       name: AssignKey
 
+    - script: |
+      echo "BlobStoragestring value: $(Deployment1.blobstoragestring.value)"
+    displayName: 'Log BlobStoragestring Value'
+    name: LogBlobStorageValue
+
 - stage: Function
   displayName: Function Deployment
 
@@ -117,4 +122,4 @@ stages:
         slotName: 'production'
         package: '$(Build.ArtifactStagingDirectory)/**/*.zip'
         deploymentMethod: 'runFromPackage'
-        appSettings: '-Blob_ConnectionString $(blobstring) -Blob_ConnectionString__blob "https://$(AzureBlob).blob.core.windows.net/blob_input"'
+        appSettings: '-Blob_ConnectionString $(blobstring) -Blob_ConnectionString__blob "https://$(AzureBlob).blob.core.windows.net/"'
