add connection strign

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ stages:
         deploymentOutputs: 'Deployment1'
         
     - script: |
-        echo ##vso[task.setvariable variable=BlobString;isOutput=true;isSecure=true]$(Deployment1.blobstoragestring.value)
+        echo ##vso[task.setvariable variable=BlobString;isOutput=true;isSecure=false]$(Deployment1.blobstoragestring.value)
       name: AssignKey
 
 - stage: Function
